--- a/application-zuul-dev.yml
+++ b/application-zuul-dev.yml
@@ -7,9 +7,9 @@ zuul:
   ignoredServices: '*'
   routes:
     plat:
-      path: /plat/** #平台服务的请求路径
+      path: /plat/**
       serviceId: plat-service
     product:
       path: /product/** 
       serviceId: product-service
-  prefix: /services #请求前缀
+  prefix: /services
